<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaCadastro">

    <TextView
        android:id="@+id/txt_ALBRA"
        android:text="@string/app_name"
        android:textColor="@color/blackcurrant"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        style="@style/box_login"
        android:id="@+id/box_cadastro"
        android:layout_height="400dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_ALBRA"
        />

    <EditText
        style="@style/edit_text"
        android:id="@+id/ed_nome"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/box_cadastro"
        app:layout_constraintEnd_toEndOf="@id/box_cadastro"
        app:layout_constraintTop_toTopOf="@id/box_cadastro"
        />

    <EditText
        style="@style/edit_text"
        android:id="@+id/ed_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/box_cadastro"
        app:layout_constraintEnd_toEndOf="@id/box_cadastro"
        app:layout_constraintTop_toBottomOf="@id/ed_nome"
        />

    <EditText

        style="@style/edit_text"
        android:id="@+id/ed_senha"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/box_cadastro"
        app:layout_constraintEnd_toEndOf="@id/box_cadastro"
        app:layout_constraintTop_toBottomOf="@id/ed_email"
        />

    <TextView
        android:id="@+id/escolha"
        android:text="@string/escolha"
        android:textColor="@color/blackcurrant"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/box_cadastro"
        app:layout_constraintEnd_toEndOf="@id/box_cadastro"
        app:layout_constraintTop_toBottomOf="@id/ed_senha"
        />

    <Button
        style="@style/button_cadastro"
        android:id="@+id/btn_leitor"
        android:text="@string/leitor"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="@id/btn_cadastrar"
        app:layout_constraintTop_toBottomOf="@id/escolha"
        />

    <Button
        style="@style/button_cadastro"
        android:id="@+id/btn_autor"
        android:text="@string/autor"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="@id/btn_cadastrar"
        app:layout_constraintTop_toBottomOf="@id/escolha"
        />

    <Button
        android:id="@+id/btn_cadastrar"
        style="@style/button"
        android:layout_marginBottom="20dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="@id/box_cadastro"
        app:layout_constraintEnd_toEndOf="@id/box_cadastro"
        app:layout_constraintStart_toStartOf="@id/box_cadastro" />

</androidx.constraintlayout.widget.ConstraintLayout>