<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPrincipal">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yellow_orange"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/bemVindo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/bem_vindo"
        android:textColor="@color/blackcurrant"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/usuario"
        app:layout_constraintEnd_toEndOf="@id/usuario"
        app:layout_constraintStart_toStartOf="@id/usuario"
        />

    <TextView
        android:id="@+id/tipoUsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackcurrant"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bemVindo"
        app:layout_constraintStart_toStartOf="@id/usuario"
        app:layout_constraintEnd_toEndOf="@id/usuario"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/crimson"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        />

    <Button
        android:id="@+id/btn_deslogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/red_orange"
        android:hint="@string/sair"
        android:textColorHint="@color/blackcurrant"
        app:layout_constraintBottom_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintEnd_toEndOf="@+id/layoutToolBar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ObrasCadastradas"
        style="@style/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:hint="@string/obras_cadastradas"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btn_leitorMode"
        style="@style/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/modo_leitor"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blackcurrant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_button"
        android:contentDescription="@string/adicionar_obras"
        android:drawableTint="@color/blackcurrant"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>