<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPrincipalLeitor">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/yellow_orange"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/blackcurrant"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/voltar"
        android:background="@color/yellow_orange"
        android:visibility="gone"
        app:tint="@color/blackcurrant"
        app:layout_constraintBottom_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutToolBar"
        android:src="@drawable/ic_back"
        />

    <Button
        android:id="@+id/deslogar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sair"
        android:backgroundTint="@color/red_orange"
        android:textColorHint="@color/blackcurrant"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintEnd_toEndOf="@+id/layoutToolBar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutToolBar" />
</androidx.constraintlayout.widget.ConstraintLayout>